--- a/src/propedit/manifest.xml.erb
+++ b/src/propedit/manifest.xml.erb
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <assembly xmlns="urn:schemas-microsoft-com:asm.v1" manifestVersion="1.0" xmlns:asmv3="urn:schemas-microsoft-com:asm.v3" >
-  <assemblyIdentity version="1.0.0.0" processorArchitecture="<%= c(:MINGW_PROCESSOR_ARCH) %>" name="Moritz.Bunkus.mkvmerge.exe" type="win32"/>
+  <assemblyIdentity version="1.0.0.0" processorArchitecture="<%= c(:MINGW_PROCESSOR_ARCH) %>" name="Moritz.Bunkus.mkvpropedit.exe" type="win32"/>
   <description>WindowsExecutable</description>
   <trustInfo xmlns="urn:schemas-microsoft-com:asm.v2">
     <security>
