GUI: BCP47: show warnings if deprecated subtags are used
Part of the implementation of #3307.

--- a/src/mkvtoolnix-gui/forms/util/language_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/util/language_dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>801</width>
-    <height>513</height>
+    <height>537</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -286,10 +286,36 @@
       <string>Status</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="2" column="0">
+       <widget class="QLabel" name="lWarningsLabel">
+        <property name="text">
+         <string>Warnings:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+        </property>
+       </widget>
+      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="lStatusLabel">
         <property name="text">
          <string>Status:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLabel" name="lWarnings">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string notr="true">some warnings</string>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
