BCP47: reduce maximum number of extended language subtags from 3 to 1
This is in accordance with RFC 5646 section 2.2.2 which states:

> 4.  Although the ABNF production 'extlang' permits up to three
>     extended language tags in the language tag, extended language
>     subtags MUST NOT include another extended language subtag in
>     their 'Prefix'.  That is, the second and third extended language
>     subtag positions in a language tag are permanently reserved and
>     tags that include those subtags in that position are, and will
>     always remain, invalid.

Part of the implementation of #3307.

--- a/src/mkvtoolnix-gui/forms/util/language_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/util/language_dialog.ui
@@ -101,7 +101,7 @@
              <x>0</x>
              <y>0</y>
              <width>733</width>
-             <height>227</height>
+             <height>225</height>
             </rect>
            </property>
            <property name="autoFillBackground">
@@ -188,17 +188,6 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="2">
-             <widget class="QPushButton" name="pbAddExtendedSubtag">
-              <property name="text">
-               <string/>
-              </property>
-              <property name="icon">
-               <iconset resource="../../qt_resources.qrc">
-                <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
-              </property>
-             </widget>
-            </item>
             <item row="4" column="2">
              <widget class="QPushButton" name="pbAddVariant">
               <property name="text">
@@ -211,17 +200,17 @@
              </widget>
             </item>
             <item row="1" column="0">
-             <widget class="QLabel" name="lExtendedSubtags">
+             <widget class="QLabel" name="lExtendedSubtag">
               <property name="text">
-               <string>&amp;Extended subtags:</string>
+               <string>&amp;Extended subtag:</string>
               </property>
               <property name="buddy">
-               <cstring>cbExtendedSubtag1</cstring>
+               <cstring>cbExtendedSubtag</cstring>
               </property>
              </widget>
             </item>
             <item row="1" column="1">
-             <widget class="QComboBox" name="cbExtendedSubtag1"/>
+             <widget class="QComboBox" name="cbExtendedSubtag"/>
             </item>
             <item row="6" column="1">
              <widget class="QLineEdit" name="lePrivateUse1"/>
@@ -449,8 +438,7 @@
   <tabstop>rbComponentSelection</tabstop>
   <tabstop>saComponents</tabstop>
   <tabstop>cbLanguage</tabstop>
-  <tabstop>cbExtendedSubtag1</tabstop>
-  <tabstop>pbAddExtendedSubtag</tabstop>
+  <tabstop>cbExtendedSubtag</tabstop>
   <tabstop>cbScript</tabstop>
   <tabstop>cbRegion</tabstop>
   <tabstop>cbVariant1</tabstop>
