GUI: BCP47: make verbiage explicit (no "extlang" abbreviation)

--- a/src/mkvtoolnix-gui/forms/util/language_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/util/language_dialog.ui
@@ -202,7 +202,7 @@
             <item row="1" column="0">
              <widget class="QLabel" name="lExtendedSubtag">
               <property name="text">
-               <string>&amp;Extended subtag:</string>
+               <string>&amp;Extended language subtag:</string>
               </property>
               <property name="buddy">
                <cstring>cbExtendedSubtag</cstring>
