GUI: BCP47: make normalization form info non-warnings depending on preferences
So far if there was a canonical and/or extlang form that was different
form what the user entered those pieces of information were shown as
warnings.

With this change the state of the preferences are taken into
account. The same pieces of information are now only a warning if the
different normalization form is the one selected in the preferences as
the one to normalize to.

For example: if you enter `yue` (which is a canonical form with the
corresponding extlang form `zh-yue`) & your preferences are set to
"canonical", then this situation is judged "OK" as the text entered
matches the form you want according to the preferences. A text with an
"info" icon is shown, stating that there's an extlang form of `zh-yue`
available.

If, however, your preferences are set to "extlang", then a text with
a "warning" icon is shown stating what the extlang form would be.

If your preferences are set to "no normalization" the messages are
always shown with an "info" icon.

Part of the implementation of #3307.

--- a/src/mkvtoolnix-gui/forms/util/language_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/util/language_dialog.ui
@@ -276,9 +276,9 @@
      </property>
      <layout class="QGridLayout" name="gridLayout">
       <item row="2" column="0">
-       <widget class="QLabel" name="lWarningsLabel">
+       <widget class="QLabel" name="lInfoWarningsLabel">
         <property name="text">
-         <string>Warnings:</string>
+         <string>Information &amp; Warnings:</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -293,18 +293,12 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QLabel" name="lWarnings">
+       <widget class="QWidget" name="wInfoWarnings" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
-        </property>
-        <property name="text">
-         <string notr="true">some warnings</string>
-        </property>
-        <property name="wordWrap">
-         <bool>true</bool>
         </property>
        </widget>
       </item>
@@ -317,16 +311,6 @@
           </property>
           <property name="pixmap">
            <pixmap resource="../../qt_resources.qrc">:/icons/16x16/dialog-ok-apply.png</pixmap>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="lStatusWarningsIcon">
-          <property name="text">
-           <string notr="true"/>
-          </property>
-          <property name="pixmap">
-           <pixmap resource="../../qt_resources.qrc">:/icons/16x16/dialog-warning.png</pixmap>
           </property>
          </widget>
         </item>
@@ -367,6 +351,12 @@
       </item>
       <item row="1" column="1">
        <widget class="QLabel" name="lParserError">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
          <string notr="true">actual error text</string>
         </property>
