GUI: mux: make track property group boxes collapsible
The class implementing a collapsible group box,
`QgsCollapsibleGroupBox`, was extracted from the QGIS project. It is
licensed under the GNU GPL v2 or later.

--- a/src/mkvtoolnix-gui/qt_resources.qrc
+++ b/src/mkvtoolnix-gui/qt_resources.qrc
@@ -112,6 +112,10 @@
   <file alias='icons/16x16/document-save@2x.png'>../../share/icons/32x32/document-save.png</file>
   <file alias='icons/16x16/documentinfo.png'>../../share/icons/16x16/documentinfo.png</file>
   <file alias='icons/16x16/documentinfo@2x.png'>../../share/icons/32x32/documentinfo.png</file>
+  <file alias='icons/16x16/draw-triangle2.png'>../../share/icons/16x16/draw-triangle2.png</file>
+  <file alias='icons/16x16/draw-triangle2@2x.png'>../../share/icons/32x32/draw-triangle2.png</file>
+  <file alias='icons/16x16/draw-triangle4.png'>../../share/icons/16x16/draw-triangle4.png</file>
+  <file alias='icons/16x16/draw-triangle4@2x.png'>../../share/icons/32x32/draw-triangle4.png</file>
   <file alias='icons/16x16/edit-copy.png'>../../share/icons/16x16/edit-copy.png</file>
   <file alias='icons/16x16/edit-copy@2x.png'>../../share/icons/32x32/edit-copy.png</file>
   <file alias='icons/16x16/edit-entry.png'>../../share/icons/16x16/edit-entry.png</file>
@@ -188,6 +192,10 @@
   <file alias='icons/16x16/view-choose@2x.png'>../../share/icons/32x32/view-choose.png</file>
   <file alias='icons/16x16/view-task.png'>../../share/icons/16x16/view-task.png</file>
   <file alias='icons/16x16/view-task@2x.png'>../../share/icons/32x32/view-task.png</file>
+  <file alias='icons/24x24/draw-triangle2.png'>../../share/icons/24x24/draw-triangle2.png</file>
+  <file alias='icons/24x24/draw-triangle2@2x.png'>../../share/icons/48x48/draw-triangle2.png</file>
+  <file alias='icons/24x24/draw-triangle4.png'>../../share/icons/24x24/draw-triangle4.png</file>
+  <file alias='icons/24x24/draw-triangle4@2x.png'>../../share/icons/48x48/draw-triangle4.png</file>
   <file alias='icons/24x24/mkvextract.png'>../../share/icons/24x24/mkvextract.png</file>
   <file alias='icons/24x24/mkvextract@2x.png'>../../share/icons/48x48/mkvextract.png</file>
   <file alias='icons/24x24/mkvinfo.png'>../../share/icons/24x24/mkvinfo.png</file>
@@ -256,6 +264,8 @@
   <file alias='icons/32x32/document-save-as.png'>../../share/icons/32x32/document-save-as.png</file>
   <file alias='icons/32x32/document-save.png'>../../share/icons/32x32/document-save.png</file>
   <file alias='icons/32x32/documentinfo.png'>../../share/icons/32x32/documentinfo.png</file>
+  <file alias='icons/32x32/draw-triangle2.png'>../../share/icons/32x32/draw-triangle2.png</file>
+  <file alias='icons/32x32/draw-triangle4.png'>../../share/icons/32x32/draw-triangle4.png</file>
   <file alias='icons/32x32/edit-copy.png'>../../share/icons/32x32/edit-copy.png</file>
   <file alias='icons/32x32/edit-entry.png'>../../share/icons/32x32/edit-entry.png</file>
   <file alias='icons/32x32/edit-select-all.png'>../../share/icons/32x32/edit-select-all.png</file>
@@ -330,6 +340,8 @@
   <file alias='icons/48x48/document-preview-archive.png'>../../share/icons/48x48/document-preview-archive.png</file>
   <file alias='icons/48x48/document-preview-archive@2x.png'>../../share/icons/96x96/document-preview-archive.png</file>
   <file alias='icons/48x48/document-revert.png'>../../share/icons/48x48/document-revert.png</file>
+  <file alias='icons/48x48/draw-triangle2.png'>../../share/icons/48x48/draw-triangle2.png</file>
+  <file alias='icons/48x48/draw-triangle4.png'>../../share/icons/48x48/draw-triangle4.png</file>
   <file alias='icons/48x48/edit-entry.png'>../../share/icons/48x48/edit-entry.png</file>
   <file alias='icons/48x48/edit-select-all.png'>../../share/icons/48x48/edit-select-all.png</file>
   <file alias='icons/48x48/edit-table-insert-row-above.png'>../../share/icons/48x48/edit-table-insert-row-above.png</file>
