--- a/src/mkvtoolnix-gui/forms/merge/tab.ui
+++ b/src/mkvtoolnix-gui/forms/merge/tab.ui
@@ -423,7 +423,7 @@
                   </property>
                   <layout class="QVBoxLayout" name="verticalLayout_9">
                    <item>
-                    <widget class="QGroupBox" name="generalOptionsBox">
+                    <widget class="mtx::gui::Util::QgsCollapsibleGroupBox" name="generalOptionsBox">
                      <property name="title">
                       <string>General options</string>
                      </property>
@@ -611,7 +611,7 @@
                     </widget>
                    </item>
                    <item>
-                    <widget class="QGroupBox" name="timestampsAndDefaultDurationBox">
+                    <widget class="mtx::gui::Util::QgsCollapsibleGroupBox" name="timestampsAndDefaultDurationBox">
                      <property name="title">
                       <string>Timestamps and default duration</string>
                      </property>
@@ -768,7 +768,7 @@
                     </widget>
                    </item>
                    <item>
-                    <widget class="QGroupBox" name="videoPropertiesBox">
+                    <widget class="mtx::gui::Util::QgsCollapsibleGroupBox" name="videoPropertiesBox">
                      <property name="title">
                       <string>Video properties</string>
                      </property>
@@ -892,7 +892,7 @@
                     </widget>
                    </item>
                    <item>
-                    <widget class="QGroupBox" name="audioPropertiesBox">
+                    <widget class="mtx::gui::Util::QgsCollapsibleGroupBox" name="audioPropertiesBox">
                      <property name="title">
                       <string>Audio properties</string>
                      </property>
@@ -936,7 +936,7 @@
                     </widget>
                    </item>
                    <item>
-                    <widget class="QGroupBox" name="subtitleAndChapterPropertiesBox">
+                    <widget class="mtx::gui::Util::QgsCollapsibleGroupBox" name="subtitleAndChapterPropertiesBox">
                      <property name="title">
                       <string>Subtitle and chapter properties</string>
                      </property>
@@ -982,7 +982,7 @@
                     </widget>
                    </item>
                    <item>
-                    <widget class="QGroupBox" name="miscellaneousBox">
+                    <widget class="mtx::gui::Util::QgsCollapsibleGroupBox" name="miscellaneousBox">
                      <property name="title">
                       <string>Miscellaneous</string>
                      </property>
@@ -2062,6 +2062,12 @@
    <class>mtx::gui::Util::FilesDragDropWidget</class>
    <extends>QWidget</extends>
    <header>mkvtoolnix-gui/util/files_drag_drop_widget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>mtx::gui::Util::QgsCollapsibleGroupBox</class>
+   <extends>QGroupBox</extends>
+   <header>mkvtoolnix-gui/util/qgs_collapsible_group_box.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
