--- a/src/tools/element_info.cpp.erb
+++ b/src/tools/element_info.cpp.erb
@@ -7,18 +7,7 @@
 std::map<uint32_t, std::string> g_element_names;
 
 void
-init_element_names() {
-  g_element_names[0xbf]       = "EBML::Crc32";
-  g_element_names[0x4282]     = "EBML::DocType";
-  g_element_names[0x4285]     = "EBML::DocTypeReadVersion";
-  g_element_names[0x4287]     = "EBML::DocTypeVersion";
-  g_element_names[0x1a45dfa3] = "EBML::Head";
-  g_element_names[0x42f2]     = "EBML::MaxIdLength";
-  g_element_names[0x42f3]     = "EBML::MaxSizeLength";
-  g_element_names[0x42f7]     = "EBML::ReadVersion";
-  g_element_names[0x4286]     = "EBML::Version";
-  g_element_names[0xec]       = "EBML::Void";
-<% libmatroska_elements.each do |element| %>
+init_element_names() {<% libmatroska_elements.each do |element| %>
   g_element_names[<%= element[:id] %>]<%= " " * (10 - element[:id].length) %> = "<%= element[:name] %>";<% end %>
 }
 
@@ -40,8 +29,6 @@ init_master_information() {
     "<%= element[:name] %>",<% end %>
     nullptr
   };
-
-  g_master_information[0x1a45dfa3] = true; // EBML::Head
 
   int i;
   for (i = 0; s_master_names[i]; ++i) {
